tests/paczka1/fuzzy1/64836824.err
Error in line 18: B6b S822 @9,9
Error in line 32: B6b S822 30,99
